--- a/Code/Assembly-CSharp.csproj
+++ b/Code/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
      <Compile Include="Assets\Scripts\Our Scripts\Inventory.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Key.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Level1Uni1.cs" />
+     <Compile Include="Assets\Scripts\Our Scripts\MoveCamera.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Movment.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\PlatformMove.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\PlayButton.cs" />
