--- a/Code/Assembly-CSharp-vs.csproj
+++ b/Code/Assembly-CSharp-vs.csproj
@@ -61,17 +61,22 @@
      <Compile Include="Assets\Scripts\Our Scripts\AISight.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Bullet.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Door.cs" />
+     <Compile Include="Assets\Scripts\Our Scripts\GameStartup.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Interaction.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Inventory.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Key.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Level1Uni1.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\MoveCamera.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Movment.cs" />
+     <Compile Include="Assets\Scripts\Our Scripts\NetObstacle.cs" />
+     <Compile Include="Assets\Scripts\Our Scripts\NetTrigger.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\PlatformMove.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\PlatformSwing.cs" />
+     <Compile Include="Assets\Scripts\Our Scripts\PlatformSwing2.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\PlayButton.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\SavePosition.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\SceneObject.cs" />
+     <Compile Include="Assets\Scripts\Our Scripts\SlowCharacter.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\TeleportEffect.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\TextBox.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Timer.cs" />
