Finished Net and Oil Slick obstacle.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@
 /Code/Assets/Prefabs/Key file.prefab
 /Code/Assets/Prefabs/Key file.prefab.meta~HEAD
 /Code/Assets/Prefabs/Key file 1.prefab
+/Code/Assembly-CSharp.csproj
+/Code/Assembly-CSharp-firstpass.csproj
+/Code/Assembly-CSharp-firstpass-vs.csproj
+/Code/Assembly-CSharp-vs.csproj
+/Code/Assembly-UnityScript-firstpass.unityproj
+/Code/Assembly-UnityScript-firstpass-vs.unityproj
+/Code/Code.sln
+/Code/Code-csharp.sln
