--- a/Code/Assembly-CSharp.csproj
+++ b/Code/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\Scripts\Our Scripts\SavePosition.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\SceneObject.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\SlowCharacter.cs" />
+     <Compile Include="Assets\Scripts\Our Scripts\StoryScript.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\TeleportEffect.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\TextBox.cs" />
      <Compile Include="Assets\Scripts\Our Scripts\Timer.cs" />
