Adding more assets to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@
 /Code/Code.sln
 /Code/Code-csharp.sln
 /Code/Assets/LowPolyBushVinesPackage
+/Code/Assets/LowPolyBushVinesPackage/Materials
+/Code/Assets/LowPolyBushVinesPackage/Standard Assets
+/Code/Assets/LowPolyBushVinesPackage/Terrain
+/Code/Assets/LowPolyBushVinesPackage/Textures
+/Code/Assets/LowPolyBushVinesPackage/Textures/BG.tga
+/Code/Assets/LowPolyBushVinesPackage/Textures/Cache.mxc3
+/Code/Assets/LowPolyBushVinesPackage/Textures/Graphe.tga
+/Code/Assets/LowPolyBushVinesPackage/Textures/Wood.tga
