--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /Code/Assets/LowPolyBushVinesPackage/Textures/Cache.mxc3
 /Code/Assets/LowPolyBushVinesPackage/Textures/Graphe.tga
 /Code/Assets/LowPolyBushVinesPackage/Textures/Wood.tga
+/Code/Assets/LowPolyBushVinesPackage
