gitignored the terrain asset

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 /Code/Assets/LowPolyBushVinesPackage/Textures/Graphe.tga
 /Code/Assets/LowPolyBushVinesPackage/Textures/Wood.tga
 /Code/Assets/LowPolyBushVinesPackage
+/Code/Assets/LowPolyBushVinesPackage/Terrain/New Terrain.asset
